--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-debugbar": "^3.9",
+        "barryvdh/laravel-dompdf": "^2.2",
         "darryldecode/cart": "^4.2",
         "guzzlehttp/guzzle": "^7.2",
         "hexadog/laravel-menus-manager": "^1.2",
