--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dependencies": {
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.0",
+        "@fullcalendar/daygrid": "^6.1.14",
+        "@fullcalendar/react": "^6.1.14",
         "@mui/icons-material": "^5.15.11",
         "@mui/lab": "^5.0.0-alpha.170",
         "@mui/material": "^5.15.11",
@@ -29,8 +31,12 @@
         "dayjs": "^1.11.10",
         "laravel-echo": "^1.15.3",
         "material-react-table": "^2.12.1",
+        "moment": "^2.30.1",
+        "moment-timezone": "^0.5.45",
         "qs": "^6.12.1",
         "react": "^18.2.0",
+        "react-big-calendar": "^1.13.0",
+        "react-calendar": "^5.0.0",
         "react-dom": "^18.2.0",
         "react-geocode": "^1.0.0-alpha.1",
         "react-hook-form": "^7.51.4",
