--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "dependencies": {
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.4",
-        "@emotion/styled": "^11.11.0",
-        "@fullcalendar/daygrid": "^6.1.14",
-        "@fullcalendar/react": "^6.1.14",
         "@emotion/styled": "^11.11.5",
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
         "@fortawesome/free-solid-svg-icons": "^6.5.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@fullcalendar/daygrid": "^6.1.14",
+        "@fullcalendar/react": "^6.1.14",
         "@mui/icons-material": "^5.15.11",
         "@mui/lab": "^5.0.0-alpha.170",
         "@mui/material": "^5.15.11",
@@ -32,6 +31,9 @@
         "@mui/x-date-pickers": "^7.5.0",
         "@react-google-maps/api": "^2.19.3",
         "@react-spring/web": "^9.7.3",
+        "@tsparticles/engine": "^3.5.0",
+        "@tsparticles/preset-confetti": "^3.1.0",
+        "chart.js": "^4.4.3",
         "date-fns": "^3.6.0",
         "dayjs": "^1.11.10",
         "framer-motion": "^11.2.10",
@@ -41,12 +43,10 @@
         "moment": "^2.30.1",
         "moment-timezone": "^0.5.45",
         "qs": "^6.12.1",
-
         "react": "^18.2.0",
         "react-big-calendar": "^1.13.0",
         "react-calendar": "^5.0.0",
         "react-dom": "^18.2.0",
-
         "react-geocode": "^1.0.0-alpha.1",
         "react-hook-form": "^7.51.4",
         "react-icons": "^5.2.1",
