--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "darryldecode/cart": "^4.2",
         "guzzlehttp/guzzle": "^7.2",
         "hexadog/laravel-menus-manager": "^1.2",
-        "intervention/image": "^3.5",
+        "intervention/image": "^3.7",
         "jorenvanhocht/laravel-share": "^4.2",
         "laravel/framework": "^10.10",
         "laravel/octane": "^2.4",
@@ -23,6 +23,7 @@
         "livewire/livewire": "^3.0",
         "maatwebsite/excel": "^3.1",
         "mongodb/mongodb": "^1.16",
+        "spatie/image": "^3.6",
         "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-cookie-consent": "^3.3",
         "spatie/laravel-sitemap": "^7.2"
