--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@types/sortablejs": "^1.15.8",
+        "@vitejs/plugin-react": "^4.3.1",
         "axios": "^1.6.7",
         "bootstrap": "^5.2.3",
         "laravel-mix": "^6.0.49",
