--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "framer-motion": "^11.2.10",
         "laravel-echo": "^1.15.3",
         "lodash": "^4.17.21",
+        "lz-string": "^1.5.0",
         "material-react-table": "^2.12.1",
         "moment": "^2.30.1",
         "moment-timezone": "^0.5.45",
